--- a/Sist-Operativos-2/nbproject/project.properties
+++ b/Sist-Operativos-2/nbproject/project.properties
@@ -35,8 +35,7 @@ dist.jlink.output=${dist.jlink.dir}/Sist-Operativos-2
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${libs.absolutelayout.classpath}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -72,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Sist-Operativos-2
-main.class=Classes.Main
+main.class=sist.operativos.pkg2.SistOperativos2
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
